--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "validator": "^13.12.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
