--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^1.41.3",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
