--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cloudinary": "^1.41.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
