--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.9.16",
     "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
