--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "formidable": "^3.5.2",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
@@ -47,6 +49,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.0",
+    "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "validator": "^13.12.0",
